--- a/CreArte/Views/Kardex/Producto.cshtml
+++ b/CreArte/Views/Kardex/Producto.cshtml
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="col-6 col-md-2">
-                <div class="ua-stat p-3 border rounded-3" style="background-color:#FF007D">s
+                <div class="ua-stat p-3 border rounded-3" style="background-color:#FF007D">
                     <div class="small" style="color:white">Ajustes Salida</div>
                     <div class="fs-5 fw-semibold" style="color:white">@Model.TotalAjustesSalida</div>
                 </div>
