--- a/CreArte/Views/Inventario/Details.cshtml
+++ b/CreArte/Views/Inventario/Details.cshtml
@@ -118,7 +118,7 @@
 
                 <button type="button" class="btn-AjSalida"
                         onclick="openFormModal('@Url.Action("AjusteSalida", "Inventario", new { productoId = Model.PRODUCTO_ID })', 'Ajuste de Salida')">
-                    <i class="bi bi-dash-circle"></i> Salida
+                    <i class="bi bi-dash-circle"></i> Ajuste Salida
                 </button>
 
                 <!-- AJUSTE PRECIO (no modifica stock) -->
@@ -131,7 +131,7 @@
 
                 <button type="button" class="btn-AjPrecio"
                         onclick="openFormModal('@Url.Action("AjustePrecio", "Inventario", new { productoId = Model.PRODUCTO_ID })', 'Ajuste de Precio')">
-                    <i class="bi bi-currency-dollar"></i> A. Precio
+                    <i class="bi bi-cash"></i> Ajuste Precio
                 </button>
 
                 <!-- Ver Kardex del producto -->
